--- a/html/day02/home/css-select.html
+++ b/html/day02/home/css-select.html
@@ -8,6 +8,12 @@
         .top_nav ul li{
             border: 1px solid blue;
         }
+        #abc ~ li{
+            background-color: sandybrown;
+        }
+        li.one{
+            font-size: 20px;
+        }
     </style>
 </head>
 <body>
@@ -15,7 +21,7 @@
         <ul>
             <li>首页</li>
             <li>校园新闻</li>
-            <li>招生就业</li>
+            <li class="one">招生就业</li>
             <li>学院风采</li>
             <li>学生作品</li>
             <li>考试系统</li>
@@ -23,8 +29,8 @@
     </div>
     <div class="left_nav">
         <ul>
+            <li id="abc">马克思学院</li>
             <li>计算机学院</li>
-            <li>马克思学院</li>
             <li>艺术学院</li>
         </ul>
     </div>
